--- a/requirements/nginx/nginx.conf
+++ b/requirements/nginx/nginx.conf
@@ -70,7 +70,7 @@ http {
 		#root and index and server_name
 		root /var/www/html;
 		server_name localhost;
-		index index.html index.php  index.htm;
+		index index.php index.html  index.htm;
 
 		location / {
 			try_files $uri $uri/ =404;
@@ -79,6 +79,8 @@ http {
 		location ~ \.php$ {								# Pour toutes les requetes php
 			include snippets/fastcgi-php.conf;
 			fastcgi_pass 127.0.0.1:9000;				# Comment renvoyer les requetes php sur le port 9000
+	        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        	include fastcgi_params;
 		}
 	}
 }
