--- a/requirements/nginx/nginx.conf
+++ b/requirements/nginx/nginx.conf
@@ -78,7 +78,7 @@ http {
 
 		location ~ \.php$ {								# Pour toutes les requetes php
 			include snippets/fastcgi-php.conf;
-			fastcgi_pass 127.0.0.1:9000;				# Comment renvoyer les requetes php sur le port 9000
+			fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
 	        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         	include fastcgi_params;
 		}
