--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
-version: "3"
-
 services:
   nginx:
     networks:
       - inception
-    build: requirements/nginx/ 
-    container_name: nginx 
-    depends_on:        			 # Nouvelle ligne, indiquant de ne pas démarrer NGINX tant que WordPress n'a pas démarré.
+    build: requirements/nginx/
+    container_name: nginx
+    depends_on:
       - wordpress
     ports:
-      - "443:443"         
+      - "443:443"
     volumes:
       - wordpress:/var/www/wordpress
     restart: always
+
   mariadb:
     networks:
       - inception
@@ -20,6 +19,9 @@ services:
     container_name: mariadb
     restart: unless-stopped
     env_file: .env
+    volumes:
+      - mariadb:/var/lib/mysql  # Monté sur le chemin par défaut de MariaDB
+
   wordpress:
     networks:
       - inception
@@ -29,28 +31,20 @@ services:
     expose:
       - "9000"
 
-
-# volumes:
-#   wordpress:
-#     driver: local # ici nous stockons le volume en local
-#     driver_opts:
-#     type: 'none' 									# aucun type spécifique
-#     o: 'bind'
-#     device: '/Users/login/data/wordpress' 		#Ou stocker le dossier sur votre ordinateur en local
-#   mariadb:
-#     driver: local
-#     driver_opts:
-#     type: 'none' 
-#     o: 'bind'										 # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
-#     device: '/Users/login/data/mariadb'
+volumes:
+  wordpress:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /Users/login/data/wordpress  # Changez ce chemin selon vos besoins
+  mariadb:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /Users/login/data/mariadb  # Changez ce chemin selon vos besoins
 
 networks:
-    inception:
-      driver: bridge
-  # wp-php:
-  #   build: requirements/wp-php/
-  #   env_file: .env
-  #   container_name: wp-php
-  #   ports:
-  #   - "443:443"
-  #   restart: always 
+  inception:
+    driver: bridge
