--- a/requirements/wordpress/Dockerfile
+++ b/requirements/wordpress/Dockerfile
@@ -18,14 +18,14 @@ RUN	chown -R root:root /var/www/wordpress
 
 COPY ./www.conf /etc/php/7.3/fpm/pool.d/
 
-# RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-# RUN chmod +x wp-cli.phar
-# RUN mv wp-cli.phar /usr/local/bin/wp
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar
+RUN mv wp-cli.phar /usr/local/bin/wp
 
-# COPY auto_config.sh /usr/local/bin/auto_config.sh
+COPY auto_config.sh /usr/local/bin/auto_config.sh
 
-# RUN chmod +x /usr/local/bin/auto_config.sh
+RUN chmod +x /usr/local/bin/auto_config.sh
 
-# ENTRYPOINT ["/usr/local/bin/auto_config.sh"]
+ENTRYPOINT ["/usr/local/bin/auto_config.sh"]
 
 CMD ["php-fpm7.3", "-F"]
