remains little error of connection

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DOMAIN_NAME=skapersk.42.fr
-MYSQL_ROOT_PSW=Xo78Gj!,Gh09
 MYSQL_DB=wordpress_db
-MYSQL_USER=wordpress_user
+MYSQL_USER=skapersk
 MYSQL_PSW=Ki74Bh?,Bd78
+MYSQL_DB_HOST=mariadb
+MYSQL_ROOT_PSW=Xo78Gj!,Gh09
