--- a/requirements/nginx/Dockerfile
+++ b/requirements/nginx/Dockerfile
@@ -12,18 +12,19 @@ RUN apt update && apt upgrade -y && \
 
 RUN mkdir -p /etc/nginx/ssl
 
-RUN apt install openssl -y
-
-RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=skapersk.42.fr/UID=skapersk"
-
-RUN mkdir -p /var/run/nginx
+RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt \
+	-keyout /etc/nginx/ssl/inception.key -subj \
+	"/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=skapersk.42.fr/UID=skapersk"
 
 COPY ./nginx.conf /etc/nginx/nginx.conf
 # COPY ./www.conf /etc/php/7.3/fpm/pool.d/
+RUN mkdir -p /var/run/nginx
 
-RUN chmod 755 /var/www/html
+# RUN chmod 755 /var/www/html
 
-RUN chown -R www-data:www-data /var/www/html
+# RUN chown -R www-data:www-data /var/www/html
+
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
 
