--- a/requirements/nginx/nginx.conf
+++ b/requirements/nginx/nginx.conf
@@ -69,7 +69,7 @@ http {
 
 		#root and index and server_name
 		root /var/www/html;
-		server_name localhost;
+		server_name skapersk.42;
 		index index.php index.html  index.htm;
 
 		location / {
