missing localhost to skapersk

--- a/.env
+++ b/.env
@@ -1,6 +1,17 @@
-# DOMAIN_NAME=skapersk.42.fr
-# MYSQL_DB=wordpress_db
-# MYSQL_USER=skapersk
-# MYSQL_PSW=Ki74Bh?,Bd78
-# MYSQL_DB_HOST=mariadb
-# MYSQL_ROOT_PSW=Xo78Gj!,Gh09
+DOMAIN_NAME=skapersk.42.fr
+
+MYSQL_DB=wordpress_db
+MYSQL_USER=skapersk
+MYSQL_PSW=Ki74Bh?,Bd78
+MYSQL_DB_HOST=mariadb
+MYSQL_ROOT_PSW=Xo78Gj!,Gh09
+
+WP_TITLE=Inception
+WP_ADMIN=C_Nolan
+WP_ADMIN_PSW=Pl67Wk&*Ho58
+WP_ADMIN_EMAIL=chris@nolan.com
+
+WP_USER=Tom_H
+WP_USER_EMAIL=t.hardy@dicaprio.com
+WP_USER_PSW=Nf89Ab,?Wk45
+
