--- a/requirements/nginx/nginx.conf
+++ b/requirements/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
 	# SSL Settings
 	##
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+	ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
 
 	##
@@ -69,7 +69,7 @@ http {
 
 		#root and index and server_name
 		root /var/www/html;
-		server_name skapersk.42;
+		server_name skapersk.42.fr;
 		index index.php index.html  index.htm;
 
 		location / {
@@ -77,6 +77,7 @@ http {
 		}
 
 		location ~ \.php$ {								# Pour toutes les requetes php
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			include snippets/fastcgi-php.conf;
 			fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
 	        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
